fixed text overflow on resize

--- a/style/style.css
+++ b/style/style.css
@@ -119,7 +119,6 @@ div {
   justify-content:space-between;
   text-align: center;
   margin: 40px;
-  padding: 0 40px;
   height: 100px;
   line-height: 100px;
   font-weight: bold;
@@ -129,6 +128,13 @@ div {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
   animation: 500ms fadein;
+}
+
+.list-item div {
+  margin: 0px 40px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .list-item:hover {
